--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ ol {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 button {
@@ -29,6 +30,10 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
   background-color: #ffffff;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  flex-grow: 1;
 }
 img {
   display: block;
