--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ img {
 }
 /* =========/Style-header-menu========= */
 
-/* =========Style-main-section1========= */
+/* =========Style-main-title========= */
 
 .main-effective {
   background-color: #2e2f42;
@@ -129,6 +129,7 @@ img {
   width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 120px;
 }
 .main-effective-name {
   display: block;
@@ -137,11 +138,12 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
   padding-top: 180px;
-  padding-left: 316px;
-  padding-right: 316px;
+  margin-left: 316px;
+  margin-right: 316px;
   text-align: center;
+  max-width: 496px;
 }
 
 .button-stile {
@@ -151,17 +153,26 @@ img {
   letter-spacing: 0.04em;
   color: #ffffff;
   background: #4d5ae5;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   margin-left: 480px;
   margin-right: 479px;
+  border: none;
+  border-radius: 4px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .button-stile:hover,
 .button-stile:focus {
   background-color: #404bbf;
 }
 /* =========/Style-main-section1========= */
-/* =========Style-main-section2========= */
+/* =========Style-main-benefits========= */
+.main-benefits {
+  padding-bottom: 120px;
+  padding-top: 120px;
+}
+
 .hide {
   position: absolute;
   width: 1px;
@@ -176,10 +187,8 @@ img {
 
 .our-benefits-conteiner {
   display: flex;
-  margin-top: 120px;
-  margin-bottom: 120px;
-  justify-content: space-between;
   gap: 24px;
+  width: calc(100% - 72px) / 4;
 }
 
 .section-two-name {
@@ -196,7 +205,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
 }
-/* =========/Style-main-section2========= */
+/* =========/Style-main-benefits========= */
 /* =========Style-main-team========= */
 .teambackground {
   background-color: #f4f4fd;
@@ -209,6 +218,7 @@ img {
 .team-our-list {
   display: flex;
   gap: 24px;
+  width: calc(100% - 72px) / 4;
 }
 .team-color-back {
   background-color: #ffffff;
@@ -247,6 +257,12 @@ img {
 }
 /* =========/Style-main-team========= */
 /* =========Style-main-portfolio========= */
+
+.section-portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .portfolio {
   font-weight: 700;
   font-size: 36px;
@@ -255,18 +271,19 @@ img {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  margin-top: 120px;
   margin-bottom: 72px;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  align-content: space-between;
+  width: calc(100% - 48px) / 3;
   column-gap: 24px;
   row-gap: 48px;
+}
 
-  margin-bottom: 120px;
+.portfilio-border {
+  padding: 32px 16px;
 }
 
 .portfolio-name {
@@ -275,6 +292,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-name-text {
   font-size: 16px;
