--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,9 @@ img {
 
 .portfilio-border {
   padding: 32px 16px;
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
 }
 
 .portfolio-name {
