--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,8 @@ img {
   width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 120px;
+  padding-bottom: 188px;
+  padding-top: 188px;
 }
 .main-effective-name {
   display: block;
@@ -141,14 +142,14 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 48px;
-  padding-top: 180px;
-  margin-left: 316px;
-  margin-right: 316px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   max-width: 496px;
 }
 
 .button-stile {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -157,8 +158,8 @@ img {
   background: #4d5ae5;
   min-width: 169px;
   height: 56px;
-  margin-left: 480px;
-  margin-right: 479px;
+  margin-left: auto;
+  margin-right: auto;
   border: none;
   border-radius: 4px;
   padding-left: 30px;
@@ -175,7 +176,7 @@ img {
   padding-top: 120px;
 }
 
-.hide {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -190,6 +191,9 @@ img {
 .our-benefits-conteiner {
   display: flex;
   gap: 24px;
+}
+
+.our-benefits-conteiner-li {
   width: calc(100% - 72px) / 4;
 }
 
