--- a/css/styles.css
+++ b/css/styles.css
@@ -316,8 +316,11 @@ img {
   height: 312px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 .end-logo {
+  display: block;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -325,6 +328,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-bottom: 16px;
 }
 .end-logo-part {
   color: #f4f4fd;
@@ -335,8 +339,4 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
-}
-.end-logo-div {
-  margin-bottom: 16px;
-  padding-top: 100px;
 }
