--- a/css/styles.css
+++ b/css/styles.css
@@ -190,9 +190,10 @@ img {
 .our-benefits-conteiner {
   display: flex;
   gap: 24px;
+}
+.our-benefits-conteiner-li {
   width: calc((100% - 72px) / 4);
 }
-
 .section-two-name {
   font-weight: 500;
   font-size: 20px;
